--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -197,6 +197,9 @@
                             <li><a class="dropdown-item" href="{{ url_for('account_classification.index') }}">
                                 <i class="fas fa-tags me-2"></i>账户分类管理
                             </a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('tags.index') }}">
+                                <i class="fas fa-tag me-2"></i>标签管理
+                            </a></li>
                             <li><a class="dropdown-item" href="{{ url_for('sync_sessions.index') }}">
                                 <i class="fas fa-tasks me-2"></i>同步会话管理
                             </a></li>
