--- a/app/templates/instances/edit.html
+++ b/app/templates/instances/edit.html
@@ -108,7 +108,7 @@
                         <label for="tags" class="form-label">标签</label>
                         <select class="form-select" id="tags" name="tags" multiple>
                             {% for tag in all_tags %}
-                            <option value="{{ tag.name }}" {% if tag in instance.tags %}selected{% endif %}>
+                            <option value="{{ tag.name }}" {% if tag in instance.tags.all() %}selected{% endif %}>
                                 {{ tag.display_name }} ({{ tag.category }})
                             </option>
                             {% endfor %}
