--- a/app/templates/instances/list.html
+++ b/app/templates/instances/list.html
@@ -167,8 +167,8 @@
                             {% endif %}
                         </td>
                         <td>
-                            {% if instance.tags %}
-                                {% for tag in instance.tags %}
+                            {% if instance.tags.all() %}
+                                {% for tag in instance.tags.all() %}
                                     <span class="badge bg-{{ tag.color }} me-1 mb-1">
                                         <i class="fas fa-tag me-1"></i>{{ tag.display_name }}
                                     </span>
