--- a/app/templates/instances/list.html
+++ b/app/templates/instances/list.html
@@ -197,7 +197,7 @@
                                     <i class="fas fa-plug"></i>
                                 </button>
                                 <button type="button" class="btn btn-outline-danger"
-                                        onclick="deleteInstance({{ instance.id }}, '{{ instance.name|replace("'", "\\'") }}')" title="删除">
+                                        onclick="deleteInstance({{ instance.id }}, \"{{ instance.name|replace("'", "\\'") }}\")" title="删除">
                                     <i class="fas fa-trash"></i>
                                 </button>
                             </div>
